--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 
 ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 16px;
     list-style-type: none;
